--- a/lab4/chanaistyle.css
+++ b/lab4/chanaistyle.css
@@ -42,7 +42,7 @@ html {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .footer {
-  
+
     background-color: #0099cc;
     color: #ffffff;
     text-align: center;
@@ -62,6 +62,6 @@ html {
 
 @media only screen and (min-width:768px) {
 /* For desktop  */
-.col-3 right{width:25%}
+.col-3{width:25%;background-color: green;}
 .col-6{width:50%;}
 }
