--- a/lab4/chanaistyle.css
+++ b/lab4/chanaistyle.css
@@ -56,7 +56,7 @@ html {
 }
 
 @media only screen and (min-width:600px)and (min-width:768px) {
- .col-3{width:100%}
+ .col-3{width:100%;}
  .col-6{width:25%;}
 }
 
