--- a/lab4/chanaistyle.css
+++ b/lab4/chanaistyle.css
@@ -55,7 +55,7 @@ html {
   width:100%;
 }
 
-@media only screen and (min-width:600px)and (min-width:768px) {
+@media only screen and (min-width:600px)and (maxs-width:768px) {
  .col-3{width:100%;}
  .col-6{width:25%;}
 }
