--- a/lab4/chanaistyle.css
+++ b/lab4/chanaistyle.css
@@ -51,9 +51,9 @@ html {
 }
 
 /* For mobile phones; */
-[class*="col-"]{
+/* [class*="col-"]{
   width:100%;
-}
+} */
 
 @media only screen and (min-width:600px)and (max-width:768px) {
  .col-3{width:100%;}
