--- a/lab2/style/flexbox.css
+++ b/lab2/style/flexbox.css
@@ -1,15 +1,25 @@
 body{
   margin:auto;
    width:80%;
+   min-width: 500px;
   background-color:lightblue;
 }
+
+
 
 header,section,article,nav,aside,footer,div{
   font-family:sans-serif;
   border:1px dotted #000;
   padding:10px;
-  margin:10px;
+ margin:10px;
 }
+
+#Page-Header{
+  display:flex;
+  flex-direction: row;
+}
+
+
 
 .warning{
   font-weight:bold;
@@ -19,14 +29,12 @@ header,section,article,nav,aside,footer,div{
   color:white;
 }
 
-#title:hover{
-  color:white;
-}
 #title{
-float: right;
-padding-right: 100px;
+  border:1px dotted #000;
 color:green;
 }
+
+
 
 ul{
   display:flex;
@@ -41,8 +49,6 @@ ul{
 
 ul li a{
     color:black;
-
-  /* padding:0 80px; */
   text-decoration:none;
 }
 
@@ -51,13 +57,15 @@ color:green;
 }
 
 .Page-content{
+  display:flex;
 color:red;
-
-
 }
 
- .BlogPost{
+.BlogPost{
+   margin:0;
+   padding:0;
    display:flex;
+   flex-direction: row;
 }
 
 footer a{
@@ -67,28 +75,35 @@ footer a{
 
 /* ---------------------------------------------------------------------------------------------------- */
 
-.floating-box {
+ .floating-box {
   overflow: hidden;
     display:inline-block;
-    width: 150px;
-    height: 75px;
-    margin: 10px;
-    border: 3px solid #73AD21;
+    width: 30%;
+    height: 10%;
+     border: 3px solid #73AD21;
+     padding:0;
+    margin:0;
 }
 
-.row:after {
+/* .row:after {
     content: "";
     display: table;
     clear: both;
     box-sizing: border-box;
-}
+} */
 
 .flex-1{
+
    display:flex;
    flex-direction: column;
 }
 
 .flex-2{
+
 display:flex;
 flex-direction: column;
+}
+
+.SiteLogo{
+  padding:0;
 }
