--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -20,7 +20,7 @@
           </a>
 
           <ul class="nav navbar-nav">
-            <li><a href="/">All Quotes</a></li>
+            <li><a href="/allquotes">All Quotes</a></li>
             <li><a href="/add">Add Quotes</a></li>
             <li><a href="/filter">Filter Quotes</a></li>
             <li><a href="/update">Update Quote</a></li>
