--- a/lab13-quotes/views/pages/add.ejs
+++ b/lab13-quotes/views/pages/add.ejs
@@ -6,6 +6,12 @@
 
 </head>
 
+<header>
+
+<% include ../partials/main %>
+
+</header>
+
 <body class="container">
   <main>
     <div class="jumbotron">
@@ -17,5 +23,16 @@
       </form>
     </div>
   </main>
+
+
+  <footer>
+
+
+    <% include ../partials/footer %>
+
+
+  </footer>
+
+
 </body>
 </html>
