--- a/lab13-quotes/views/pages/update.ejs
+++ b/lab13-quotes/views/pages/update.ejs
@@ -9,6 +9,13 @@
 <body class="container">
 
 
+  <header>
+
+  <% include ../partials/main %>
+
+  </header>
+
+
   <main>
     <div class="jumbotron">
       <h1>Update a quote</h1>
@@ -20,6 +27,16 @@
       </form>
     </div>
   </main>
+
+
+  <footer>
+
+
+    <% include ../partials/footer %>
+
+
+  </footer>
+
 </body>
 
 </html>
