--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -9,38 +9,32 @@
 <body class="container">
   <header>
 
+  <% include ../partials/main %>
 
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-              <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-              Star Wars Quote App!
-          </a>
-
-          <ul class="nav navbar-nav">
-            <li><a href="/allquotes">All Quotes</a></li>
-            <li><a href="/add">Add Quotes</a></li>
-            <li><a href="/filter">Filter Quotes</a></li>
-            <li><a href="/update">Update Quote</a></li>
-            <li><a href="/delete">Delete Quote</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
   </header>
 
   <main>
-    <div class="jumbotron">
+
 
       <h2>Quotes!</h2>
 
-    </div>
+      <ul>
+       <% result.forEach(function(quote) { %>
+       <li>
+       <%= quote.name %> -
+       <%= quote.quote %>
+       </li>
+       <% }); %>
+       </ul>
+
+  
   </main>
 
 
   <footer>
+
+
+    <% include ../partials/footer %>
 
 
   </footer>
