--- a/lab13/views/pages/index.ejs
+++ b/lab13/views/pages/index.ejs
@@ -17,7 +17,7 @@
 <h2>Loop</h2>
 
 <ul>
- <% drinks.forEach(function(drink) { %>
+ <% drink.forEach(function(drink) { %>
  <li>
  <%= drink.name %> -
  <%= drink.drunkness %>
