--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -19,10 +19,10 @@
       <h2>Quotes!</h2>
 
       <ul>
-        <% quotes.forEach(function(quote) { %>
+        <% quotes.forEach(function(quotes) { %>
        <li>
-       <%= quote.name %> -
-       <%= quote.quote %>
+       <%= quotes.name %> -
+       <%= quotes.quote %>
        </li>
        <% }); %>
        </ul>
