--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -19,10 +19,10 @@
       <h2>Quotes!</h2>
 
       <ul>
-        <% quotes.forEach(function(quotes) { %>
+       <% drink.forEach(function(drink) { %>
        <li>
-       <%= quotes.name %> -
-       <%= quotes.quote %>
+       <%= drink.name %> -
+       <%= drink.quote %>
        </li>
        <% }); %>
        </ul>
