--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -19,10 +19,10 @@
       <h2>Quotes!</h2>
 
       <ul>
-       <% drink.forEach(function(drink) { %>
+       <% quotes.forEach(function(quote) { %>
        <li>
-       <%= drink.name %> -
-       <%= drink.quote %>
+       <%= quote.name %> -
+       <%= quote.quote %>
        </li>
        <% }); %>
        </ul>
