--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -19,7 +19,7 @@
       <h2>Quotes!</h2>
 
       <ul>
-       <% result.forEach(function(result) { %>
+       <% quotes.forEach(function(result) { %>
        <li>
        <%= result.name %> -
        <%= result.quote %>
