--- a/lab13-quotes/views/pages/index.ejs
+++ b/lab13-quotes/views/pages/index.ejs
@@ -21,8 +21,8 @@
       <ul>
        <% result.forEach(function(quotes) { %>
        <li>
-       <%= result.name %> -
-       <%= result.quote %>
+       <%= quotes.name %> -
+       <%= quotes.quote %>
        </li>
        <% }); %>
        </ul>
