--- a/lab13-quotes/views/partials/main.ejs
+++ b/lab13-quotes/views/partials/main.ejs
@@ -11,7 +11,7 @@
       </a>
 
       <ul class="nav navbar-nav">
-        <li><a href="/allquotes">All Quotes</a></li>
+        <li><a href="/">All Quotes</a></li>
         <li><a href="/add">Add Quotes</a></li>
         <li><a href="/filter">Filter Quotes</a></li>
         <li><a href="/update">Update Quote</a></li>
