--- a/lab13/views/pages/index.ejs
+++ b/lab13/views/pages/index.ejs
@@ -17,10 +17,10 @@
 <h2>Loop</h2>
 
 <ul>
- <% drink.forEach(function(drink) { %>
+ <% drink.forEach(function(drinkable) { %>
  <li>
- <%= drink.name %> -
- <%= drink.drunkness %>
+ <%= drinkable.name %> -
+ <%= drinkable.drunkness %>
  </li>
  <% }); %>
  </ul>
