--- a/lab13/views/pages/index.ejs
+++ b/lab13/views/pages/index.ejs
@@ -17,7 +17,7 @@
 <h2>Loop</h2>
 
 <ul>
- <% drink.forEach(function(drinkable) { %>
+ <% drank.forEach(function(drinkable) { %>
  <li>
  <%= drinkable.name %> -
  <%= drinkable.drunkness %>
