--- a/lab13-quotes/views/pages/filter.ejs
+++ b/lab13-quotes/views/pages/filter.ejs
@@ -25,7 +25,7 @@
       </form>
 
       <ul>
-       <% quotes.forEach(function(quotable) { %>
+       <% result.forEach(function(quotable) { %>
        <li>
        <%= quotable.name %> -
        <%= quotable.quote %>
