--- a/lab13-quotes/views/pages/filter.ejs
+++ b/lab13-quotes/views/pages/filter.ejs
@@ -24,7 +24,14 @@
         <button type="submit">Submit</button>
       </form>
 
-
+      <ul>
+       <% quotes.forEach(function(quotable) { %>
+       <li>
+       <%= quotable.name %> -
+       <%= quotable.quote %>
+       </li>
+       <% }); %>
+       </ul>
 
     </div>
 
