--- a/lab13-quotes/views/partials/main.ejs
+++ b/lab13-quotes/views/partials/main.ejs
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">All Quotes</a></li>
         <li><a href="/add">Add Quotes</a></li>
-        <li><a href="/filter">Filter Quotes</a></li>
+        <li><a href="/filtered">Filter Quotes</a></li>
         <li><a href="/update">Update Quote</a></li>
         <li><a href="/delete">Delete Quote</a></li>
       </ul>
