--- a/lab13-quotes/views/pages/filter.ejs
+++ b/lab13-quotes/views/pages/filter.ejs
@@ -19,7 +19,7 @@
   <main>
     <div class="jumbotron">
       <h1>search for quotes by!</h1>
-      <form action="/filtered" method="POST">
+      <form action="/filtered" method="GET">
         <input type="text" placeholder="name" name="name">
         <button type="submit">Submit</button>
       </form>
