--- a/lab13-quotes/views/pages/filter.ejs
+++ b/lab13-quotes/views/pages/filter.ejs
@@ -28,7 +28,14 @@
 
     </div>
 
-
+    <ul>
+     <% quotes.forEach(function(quotable) { %>
+     <li>
+     <%= quotable.name %> -
+     <%= quotable.quote %>
+     </li>
+     <% }); %>
+     </ul>
 
 
 
