--- a/lab18-profilesystem/views/pages/profile.ejs
+++ b/lab18-profilesystem/views/pages/profile.ejs
@@ -21,6 +21,7 @@
           <!-- get the first name -->
           <h1>Hi <%= user.name.first %></h1>
           <!-- get the medium picture -->
+          <h1> Pasword <%=user.login.password %> </h1>
           <img src="<%= user.picture.medium %>" class="img-circle" />
           <!-- get the username -->
           <h2>username: <%= user.login.username %></h2>
