--- a/lab18-profilesystem/views/pages/users.ejs
+++ b/lab18-profilesystem/views/pages/users.ejs
@@ -14,7 +14,11 @@
   <main>
     <div class="jumbotron">
       <!--page to display all the users-->
+      <h1><%= currentuser%></h2>
+        
       <h2>All Students</h2>
+
+
 
           <ul>
             <!-- for each user-->
