--- a/testingCoursework/views/partials/head.ejs
+++ b/testingCoursework/views/partials/head.ejs
@@ -18,4 +18,6 @@
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
     <link rel="stylesheet" href="assets/css/Team-Clean.css">
     <link rel="stylesheet" href="assets/css/Team-Grid.css">
+    <script src = "recipe.js" </script>
+  
 </head>
