--- a/testingCoursework/views/partials/head.ejs
+++ b/testingCoursework/views/partials/head.ejs
@@ -18,6 +18,6 @@
     <link rel="stylesheet" href="assets/css/Team-Boxed.css">
     <link rel="stylesheet" href="assets/css/Team-Clean.css">
     <link rel="stylesheet" href="assets/css/Team-Grid.css">
-    <script src = "recipe.js"> </script>
+    <script src = "assets/js/recipe.js"> </script>
 
 </head>
